k8s/deploy-laravel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
  namespace: laravel
  labels:
    app: laravel-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: laravel-example
  template:
    metadata:
      labels:
        app: laravel-example
    spec:
      serviceAccountName: ascp
      containers:
        - name: laravel-php-fpm
          image: 654654165875.dkr.ecr.us-east-1.amazonaws.com/fly-laravel:latest
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: laravel-app-env
