k8s/dply-laravel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
  namespace: laravel
  labels:
    app: laravel-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: laravel-example
  template:
    metadata:
      labels:
        app: laravel-example
    spec:
      containers:
        - name: laravel
          image: nginx
          ports:
            - containerPort: 80
