k8s/svc-laravel.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel
spec:
  type: NodePort
  selector:
    app: laravel-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
